--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pg-hstore": "^2.3.2",
     "request": "^2.55.0",
     "sequelize": "^2.1.3",
+    "sequelize-cli": "^1.7.0",
     "underscore": "^1.8.3"
   }
 }
